--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "pinia": "^2.1.7",
+    "vant": "^4.8.5",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5"
   },
@@ -28,6 +29,7 @@
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
     "npm-run-all2": "^6.1.1",
+    "postcss-px-to-viewport": "^1.1.1",
     "prettier": "^3.0.3",
     "sass": "^1.71.1",
     "typescript": "~5.3.0",
