--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "prettier": "^3.0.3",
     "sass": "^1.71.1",
     "typescript": "~5.3.0",
+    "unplugin-vue-components": "^0.26.0",
     "vite": "^5.0.11",
     "vue-tsc": "^1.8.27"
   }
