--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/tsconfig": "^0.5.1",
-    "eslint": "^8.49.0",
-    "eslint-plugin-vue": "^9.17.0",
+    "eslint": "^8.57.0",
+    "eslint-plugin-vue": "^9.22.0",
     "npm-run-all2": "^6.1.1",
     "postcss-px-to-viewport": "^1.1.1",
     "prettier": "^3.0.3",
@@ -37,6 +37,14 @@
     "typescript": "~5.3.0",
     "unplugin-vue-components": "^0.26.0",
     "vite": "^5.0.11",
+    "vue-eslint-parser": "^9.4.2",
     "vue-tsc": "^1.8.27"
+  },
+  "eslintConfig": {
+   "root": true,
+   "env": {
+     "node": true,
+     "vue/setup-compiler-macros": true
+   }
   }
 }
