--- a/package.json
+++ b/package.json
@@ -37,14 +37,15 @@
     "typescript": "~5.3.0",
     "unplugin-vue-components": "^0.26.0",
     "vite": "^5.0.11",
+    "vite-plugin-svg-icons": "^2.0.1",
     "vue-eslint-parser": "^9.4.2",
     "vue-tsc": "^1.8.27"
   },
   "eslintConfig": {
-   "root": true,
-   "env": {
-     "node": true,
-     "vue/setup-compiler-macros": true
-   }
+    "root": true,
+    "env": {
+      "node": true,
+      "vue/setup-compiler-macros": true
+    }
   }
 }
