--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@rushstack/eslint-patch": "^1.3.3",
     "@tsconfig/node20": "^20.1.2",
     "@types/node": "^20.11.10",
+    "@types/nprogress": "^0.2.3",
     "@vitejs/plugin-vue": "^5.0.3",
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
@@ -31,6 +32,7 @@
     "eslint": "^8.57.0",
     "eslint-plugin-vue": "^9.22.0",
     "npm-run-all2": "^6.1.1",
+    "nprogress": "^0.2.0",
     "postcss-px-to-viewport": "^1.1.1",
     "prettier": "^3.0.3",
     "sass": "^1.71.1",
