--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   "dependencies": {
     "@vueuse/core": "^10.9.0",
     "axios": "^1.6.7",
+    "dayjs": "^1.11.10",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.1",
+    "socket.io-client": "^4.7.4",
     "vant": "^4.8.5",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5"
